# clivia-des

./: CMakeLists.txt  README.md  install.sh
ext_jni/: CMakeLists.txt
ext_jni/src/: com_sogou_nlu_clivia_commons_encrypt_EncryptFacade.c  com_sogou_nlu_clivia_commons_encrypt_EncryptFacade.h
ext_python/: CMakeLists.txt  setup.py
ext_python/src/: encrypt_facade.c
libdes/: CMakeLists.txt
libdes/include/cdes/: des.h  encrypt.h  helper.h  hex.h
libdes/src/: buffer.c  des.c  encrypt.c  helper.c  hex.c
test/: CMakeLists.txt  cect.c  test_encrypt.c  test_file.c  test_hex.c  test_hide_key.c  test_perf.c  tools.c  tools.h
